--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../img/99px_ru_wallpaper_208201_belorozovie_oblaka_v_nebe.jpg");
+  background-image: url("../bcg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
